--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "avz-cmf/saas-skeleton",
-  "description": "Saas skeleton app",
+  "name": "avz-cmf/zaboy-skeleton",
+  "description": "zaboy skeleton app",
   "minimum-stability": "stable",
   "license": "proprietary",
   "authors": [
@@ -21,7 +21,7 @@
     "zendframework/zend-diactoros": "^1.1",
     "zendframework/zend-config": "^2.6",
     "zendframework/zend-stdlib": "^3",
-    "avz-cmf/zaboy-install": "^2.0"
+    "avz-cmf/zaboy-installer": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0"
@@ -33,7 +33,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "zaboy\\test\\skeleton\\": "test/"
+      "zaboy\\test\\skeleton\\": "tests/src"
     }
   },
   "scripts": {
