Add compare to 2.1installer

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ composer.phar
 
 # User-specific stuff:
 .idea/workspace.xml
-.idea/tasks.xml
+.idea/*
 
 # Sensitive or high-churn files:
 .idea/dataSources/
