--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "zendframework/zend-diactoros": "^1.1",
     "zendframework/zend-config": "^2.6",
     "zendframework/zend-stdlib": "^3",
-    "avz-cmf/zaboy-installer": "^1.0"
+    "avz-cmf/zaboy-installer": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0"
@@ -37,8 +37,8 @@
     }
   },
   "scripts": {
-    "lib-install": "zaboy\\skeleton\\InstallerCommands::install",
-    "lib-uninstall": "zaboy\\skeleton\\InstallerCommands::uninstall",
-    "lib-reinstall": "zaboy\\skeleton\\InstallerCommands::reinstall"
+    "lib-install": "zaboy\\installer\\Command::install",
+    "lib-uninstall": "zaboy\\installer\\Command::uninstall",
+    "lib-reinstall": "zaboy\\installer\\Command::reinstall"
   }
 }
