--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollun-com/dic",
+  "name": "rollun-com/rollun-dic",
   "description": "InsideConstruct",
   "minimum-stability": "stable",
   "license": "proprietary",
@@ -21,24 +21,24 @@
     "zendframework/zend-diactoros": "^1.1",
     "zendframework/zend-config": "^2.6",
     "zendframework/zend-stdlib": "^3",
-    "rollun-com/installer": "master"
+    "rollun-com/rollun-installer": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0"
   },
   "autoload": {
     "psr-4": {
-      "rolluncom\\dic\\": "src/"
+      "rollun\\dic\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "rolluncom\\test\\dic\\": "tests/src"
+      "rollun\\test\\dic\\": "tests/src"
     }
   },
   "scripts": {
-    "lib-install": "rolluncom\\installer\\Command::install",
-    "lib-uninstall": "rolluncom\\installer\\Command::uninstall",
-    "lib-reinstall": "rolluncom\\installer\\Command::reinstall"
+    "lib-install": "rollun\\installer\\Command::install",
+    "lib-uninstall": "rollun\\installer\\Command::uninstall",
+    "lib-reinstall": "rollun\\installer\\Command::reinstall"
   }
 }
