--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "avz-cmf/zaboy-skeleton",
-  "description": "zaboy skeleton app",
+  "name": "rollun-com/rollun-skeleton",
+  "description": "Skeleton for app or lib",
   "minimum-stability": "stable",
   "license": "proprietary",
   "authors": [
@@ -21,24 +21,24 @@
     "zendframework/zend-diactoros": "^1.1",
     "zendframework/zend-config": "^2.6",
     "zendframework/zend-stdlib": "^3",
-    "avz-cmf/zaboy-installer": "^2.1"
+    "rollun-com/rollun-installer": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0"
   },
   "autoload": {
     "psr-4": {
-      "zaboy\\skeleton\\": "src/"
+      "rollun\\skeleton\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "zaboy\\test\\skeleton\\": "tests/src"
+      "rollun\\test\\skeleton\\": "tests/src"
     }
   },
   "scripts": {
-    "lib-install": "zaboy\\installer\\Command::install",
-    "lib-uninstall": "zaboy\\installer\\Command::uninstall",
-    "lib-reinstall": "zaboy\\installer\\Command::reinstall"
+    "lib-install": "rollun\\installer\\Command::install",
+    "lib-uninstall": "rollun\\installer\\Command::uninstall",
+    "lib-reinstall": "rollun\\installer\\Command::reinstall"
   }
 }
