--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "zendframework/zend-stdlib": "^3",
     "zendframework/zend-db": "2.8.2",
     "psr/log": "^1.0",
-    "rollun-com/rollun-installer": "dev-master"
+    "rollun-com/rollun-installer": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0",
