--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
     "zendframework/zend-servicemanager": "^3.0",
     "zendframework/zend-stdlib": "^3",
     "zendframework/zend-db": "2.8.2",
+    "zendframework/zend-expressive-twigrenderer": "^1.0",
     "psr/log": "^1.0",
-    "rollun-com/rollun-installer": "^1.0"
+    "rollun-com/rollun-installer": "^1.0",
+    "zendframework/zend-http": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0",
