--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Composer template
 composer.phar
+nbproject/
+temp/
 /vendor/
-
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
@@ -12,6 +13,7 @@ composer.phar
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+phpunit.xml.dist
 .idea/workspace.xml
 .idea/*
 .idea/vcs.xml
