--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "zendframework/zend-servicemanager": "^3.0",
     "zendframework/zend-stdlib": "^3",
     "zendframework/zend-db": "2.8.2",
-    "psr/log": "^1.0",
-    "rollun-com/rollun-installer": "^1.0"
+    "psr/log": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0",
