fix dep, add composer.lock to ignore

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "psr/log": "^1.0",
     "rollun-com/rollun-installer": "^1.0",
     "rollun-com/rollun-actionrender": "^3.0",
+    "rollun-com/rollun-dic": "^1.0",
     "rollun-com/rollun-datastore": "^2.0",
     "rollun-com/rollun-callback": "^3.0",
     "rollun-com/rollun-api": "^1.0",
