--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ temp/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+composer.lock
 phpunit.xml.dist
 .idea/workspace.xml
 .idea/*
