--- a/composer.json
+++ b/composer.json
@@ -14,31 +14,27 @@
       "email": "it.proffesor02@gmail.com"
     }
   ],
-
   "require": {
     "php": "^5.6 || ^7.0",
     "roave/security-advisories": "dev-master",
-    "zendframework/zend-expressive": "^1.0",
-    "zendframework/zend-expressive-helpers": "^2.0",
-    "zendframework/zend-expressive-fastroute": "^1.0",
-    "zendframework/zend-servicemanager": "^3.0",
-    "zendframework/zend-stdlib": "^3",
+    "zendframework/zend-component-installer": "^1.0 || ^0.7.0",
+    "zendframework/zend-config-aggregator": "^0.2.0",
+    "zendframework/zend-expressive": "^2.0.2",
+    "zendframework/zend-expressive-helpers": "^4.0",
+    "zendframework/zend-stdlib": "^3.1",
+    "zendframework/zend-servicemanager": "^3.3",
+    "zendframework/zend-expressive-fastroute": "^2.0",
+    "zendframework/zend-expressive-twigrenderer": "^1.4",
     "zendframework/zend-db": "2.8.2",
-    "zendframework/zend-expressive-twigrenderer": "^1.0",
     "psr/log": "^1.0",
-    "rollun-com/rollun-installer": "^2.0",
-    "rollun-com/rollun-actionrender": "^4.0",
-    "rollun-com/rollun-dic": "^1.0",
-    "rollun-com/rollun-datastore": "^3.0",
-    "rollun-com/rollun-callback": "^3.0",
-    "rollun-com/rollun-permission": "^1.0",
-    "rollun-com/rollun-api": "^2.0",
     "zendframework/zend-http": "^2.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.0",
-    "squizlabs/php_codesniffer": "^2.3",
-    "filp/whoops": "^1.1 || ^2.0"
+    "phpunit/phpunit": "^6.0.8 || ^5.7.15",
+    "squizlabs/php_codesniffer": "^2.8.1",
+    "zfcampus/zf-development-mode": "^3.1",
+    "zendframework/zend-expressive-tooling": "^0.3.2",
+    "filp/whoops": "^2.1.7"
   },
   "autoload": {
     "psr-4": {
@@ -51,7 +47,23 @@
     }
   },
   "scripts": {
-    "serve": "php -S 127.0.0.1:8080 -t public public/index.php",
+    "post-create-project-cmd": [
+      "@development-enable"
+    ],
+    "development-disable": "zf-development-mode disable",
+    "development-enable": "zf-development-mode enable",
+    "development-status": "zf-development-mode status",
+    "check": [
+      "@cs-check",
+      "@test"
+    ],
+    "clear-config-cache": "php bin/clear-config-cache.php",
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf",
+    "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
+    "test": "phpunit --colors=always",
+    "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+    "upload-coverage": "coveralls -v",
     "lib": "rollun\\installer\\Command::command"
   }
 }
