--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
   ],
   "require": {
     "php": "^5.6 || ^7.0",
-    "roave/security-advisories": "dev-master",
     "zendframework/zend-component-installer": "^1.0 || ^0.7.0",
     "zendframework/zend-config-aggregator": "^0.2.0",
     "zendframework/zend-expressive": "^2.0.2",
@@ -27,7 +26,8 @@
     "zendframework/zend-expressive-zendviewrenderer": "^1.4",
     "zendframework/zend-db": "2.8.2",
     "psr/log": "^1.0",
-    "zendframework/zend-http": "^2.5"
+    "zendframework/zend-http": "^2.5",
+    "http-interop/http-middleware": "^0.4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0.8 || ^5.7.15",
