--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,17 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
-    "zendframework/zend-component-installer": "^1.0",
-    "zendframework/zend-config-aggregator": "^1.0",
-    "zendframework/zend-stdlib": "^3.1",
-    "zendframework/zend-servicemanager": "^3.3"
+    "php": "^7.0",
+    "container-interop/container-interop": "^1.2",
+    "psr/container": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0.8 || ^5.7.15",
     "squizlabs/php_codesniffer": "^2.8.1",
-    "zfcampus/zf-development-mode": "^3.1"
+    "zfcampus/zf-development-mode": "^3.1",
+    "zendframework/zend-component-installer": "^1.0",
+    "zendframework/zend-config-aggregator": "^1.0",
+    "zendframework/zend-servicemanager": "^3.3"
   },
   "autoload": {
     "psr-4": {
