--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.2'
+        extensions: json, zip, mysqli, pdo_mysql
+        tools: composer:v1
+
     - name: Validate composer.json and composer.lock
       run: composer validate
       
