--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,4 +29,6 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Run test suite
+      env:
+        APP_ENV: dev
       run: composer run-script test
