--- a/config/autoload/development.local.php.dist
+++ b/config/autoload/development.local.php.dist
@@ -10,8 +10,8 @@
  * `composer development-enable`.
  */
 
-use Zend\Expressive\Container;
-use Zend\Expressive\Middleware\ErrorResponseGenerator;
+use Mezzio\Container;
+use Mezzio\Middleware\ErrorResponseGenerator;
 
 return [
     'dependencies' => [
