--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": "^8.0",
-    "psr/container": "^1.0|^2.0"
+    "psr/container": "^1.0 || ^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
